[package]
name = "mspm0l222x-pac"
version = "0.1.1"
authors = ["SIGPwny <hello@sigpwny.com>", "Minh Duong <hello@whitehoodhacker.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Peripheral Access Crate for the Texas Instruments MSPM0L222X microcontroller family"
repository = "https://github.com/sigpwny/mspm0l222x-pac"
readme = "README.md"
keywords = ["mspm0l2228", "pac", "arm", "cortex-m", "svd2rust"]
categories = ["embedded", "no-std"]

[package.metadata.docs.rs]
features = ["critical-section", "rt"]
targets = ["thumbv6m-none-eabi"]

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.5", optional = true }
critical-section = { version = "1.2", optional = true }
vcell = "0.1.3"

[features]
default = ["critical-section", "rt"]
critical-section = ["dep:critical-section"]
rt = ["dep:cortex-m-rt", "cortex-m-rt/device"]